src/objects/pse__Missing_Timecard_Calculation__c.object
<CustomObject>
    <fields>
        <fullName>pse__Batch_Id__c</fullName>
        <externalId>true</externalId>
        <label>Batch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Configuration__c</fullName>
        <label>Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Date_Type__c</fullName>
        <label>Date Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last Week</fullName>
                </value>
                <value>
                    <fullName>Current Week</fullName>
                </value>
                <value>
                    <fullName>Manual Run</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Missing Timecard Calculations</relationshipLabel>
        <relationshipName>Missing_Timecard_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Include_Sublevels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Sublevels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Missing Timecard Calculations</relationshipLabel>
        <relationshipName>Missing_Timecard_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Missing Timecard Calculations</relationshipLabel>
        <relationshipName>Missing_Timecard_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Week_End_Date__c</fullName>
        <label>Week End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Week_Start_Date__c</fullName>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <label>Missing Timecard Calculation</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MTC-{000000}</displayFormat>
        <label>Missing Timecard Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missing Timecard Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>